fixed spacing on TCO leaderboards

--- a/src/shared/components/Dashboard/TCOLeaderboards/styles.scss
+++ b/src/shared/components/Dashboard/TCOLeaderboards/styles.scss
@@ -4,7 +4,7 @@
   background-image: linear-gradient(225deg, #31a0ca 0%, #16679a 100%);
   border-radius: 8px;
   width: auto;
-  padding: 12px 6px 7px;
+  padding: 12px 0 0;
   margin-bottom: 20px;
 }
 
@@ -51,7 +51,8 @@
 
 .dropdown-wrapper {
   position: relative;
-  width: 108px;
+  min-width: 108px;
+  width: auto;
   height: 26px;
 
   .chevronDown {
@@ -140,7 +141,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin: 6px 0;
+  margin: 12px 0;
   padding: 0 8px;
   width: 100%;
 
@@ -156,10 +157,12 @@
   > .index {
     text-align: left;
     width: 15px;
+    margin-right: 0;
   }
 
   > .handle {
     flex: 1;
+    margin-left: 0;
   }
 
   > .tcoPoints {
